[project]
name = "smolalbert"
version = "0.1.0"
description = "my personal deep research agent"
authors = [
    {name = "blackccpie",email = "16404298+blackccpie@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "smolagents (>=1.21.1,<2.0.0)",
    "tavily-python (>=0.7.10,<0.8.0)",
    "gradio (>=5.46.1,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
